# serializer version: 1
# name: test_actions_completions[--directory-checks-BYGG_DEV_set]
  list([
    'all_checks',
    'check_inputs_outputs',
    'circular_A',
    'circular_B',
    'circular_C',
    'no_outputs_A',
    'output_file_missing',
    'same_output_file_A',
    'same_output_file_B',
    'same_output_files',
  ])
# ---
# name: test_actions_completions[--directory-checks-BYGG_DEV_unset]
  list([
    'all_checks',
    'check_inputs_outputs',
    'output_file_missing',
    'same_output_files',
  ])
# ---
# name: test_actions_completions[--directory-environments-BYGG_DEV_set]
  list([
    'action1',
    'action1_python',
    'action1_python_entrypoint_python',
    'action2',
    'action2_python',
    'clean_environments',
    'default_action',
    'default_action_python',
  ])
# ---
# name: test_actions_completions[--directory-environments-BYGG_DEV_unset]
  list([
    'action1',
    'action1_python_entrypoint_python',
    'action2',
    'clean_environments',
    'default_action',
  ])
# ---
# name: test_actions_completions[--directory-failing_jobs-BYGG_DEV_set]
  list([
    'all',
    'gcc',
    'go',
    'make',
    'npm',
  ])
# ---
# name: test_actions_completions[--directory-failing_jobs-BYGG_DEV_unset]
  list([
    'all',
    'gcc',
    'go',
    'make',
    'npm',
  ])
# ---
# name: test_actions_completions[--directory-only_python-BYGG_DEV_set]
  list([
    'hello',
    'hi',
  ])
# ---
# name: test_actions_completions[--directory-only_python-BYGG_DEV_unset]
  list([
    'hello',
    'hi',
  ])
# ---
# name: test_actions_completions[--directory-parametric-BYGG_DEV_set]
  list([
    'setup',
    'setup_test_files',
    'sort',
    'sort_test_files',
    't/l0f0.txt',
    't/l0f0.txt.in',
    't/l0f1.txt',
    't/l0f1.txt.in',
    't/l0f10.txt',
    't/l0f10.txt.in',
    't/l0f11.txt',
    't/l0f11.txt.in',
    't/l0f12.txt',
    't/l0f12.txt.in',
    't/l0f13.txt',
    't/l0f13.txt.in',
    't/l0f14.txt',
    't/l0f14.txt.in',
    't/l0f15.txt',
    't/l0f15.txt.in',
    't/l0f16.txt',
    't/l0f16.txt.in',
    't/l0f17.txt',
    't/l0f17.txt.in',
    't/l0f18.txt',
    't/l0f18.txt.in',
    't/l0f19.txt',
    't/l0f19.txt.in',
    't/l0f2.txt',
    't/l0f2.txt.in',
    't/l0f20.txt',
    't/l0f20.txt.in',
    't/l0f21.txt',
    't/l0f21.txt.in',
    't/l0f22.txt',
    't/l0f22.txt.in',
    't/l0f23.txt',
    't/l0f23.txt.in',
    't/l0f24.txt',
    't/l0f24.txt.in',
    't/l0f25.txt',
    't/l0f25.txt.in',
    't/l0f26.txt',
    't/l0f26.txt.in',
    't/l0f27.txt',
    't/l0f27.txt.in',
    't/l0f28.txt',
    't/l0f28.txt.in',
    't/l0f29.txt',
    't/l0f29.txt.in',
    't/l0f3.txt',
    't/l0f3.txt.in',
    't/l0f30.txt',
    't/l0f30.txt.in',
    't/l0f31.txt',
    't/l0f31.txt.in',
    't/l0f32.txt',
    't/l0f32.txt.in',
    't/l0f33.txt',
    't/l0f33.txt.in',
    't/l0f34.txt',
    't/l0f34.txt.in',
    't/l0f35.txt',
    't/l0f35.txt.in',
    't/l0f36.txt',
    't/l0f36.txt.in',
    't/l0f37.txt',
    't/l0f37.txt.in',
    't/l0f38.txt',
    't/l0f38.txt.in',
    't/l0f39.txt',
    't/l0f39.txt.in',
    't/l0f4.txt',
    't/l0f4.txt.in',
    't/l0f40.txt',
    't/l0f40.txt.in',
    't/l0f41.txt',
    't/l0f41.txt.in',
    't/l0f42.txt',
    't/l0f42.txt.in',
    't/l0f43.txt',
    't/l0f43.txt.in',
    't/l0f44.txt',
    't/l0f44.txt.in',
    't/l0f45.txt',
    't/l0f45.txt.in',
    't/l0f46.txt',
    't/l0f46.txt.in',
    't/l0f47.txt',
    't/l0f47.txt.in',
    't/l0f48.txt',
    't/l0f48.txt.in',
    't/l0f49.txt',
    't/l0f49.txt.in',
    't/l0f5.txt',
    't/l0f5.txt.in',
    't/l0f6.txt',
    't/l0f6.txt.in',
    't/l0f7.txt',
    't/l0f7.txt.in',
    't/l0f8.txt',
    't/l0f8.txt.in',
    't/l0f9.txt',
    't/l0f9.txt.in',
    't/l1f0.txt',
    't/l1f0.txt.in',
    't/l1f1.txt',
    't/l1f1.txt.in',
    't/l1f10.txt',
    't/l1f10.txt.in',
    't/l1f11.txt',
    't/l1f11.txt.in',
    't/l1f12.txt',
    't/l1f12.txt.in',
    't/l1f13.txt',
    't/l1f13.txt.in',
    't/l1f14.txt',
    't/l1f14.txt.in',
    't/l1f15.txt',
    't/l1f15.txt.in',
    't/l1f16.txt',
    't/l1f16.txt.in',
    't/l1f17.txt',
    't/l1f17.txt.in',
    't/l1f18.txt',
    't/l1f18.txt.in',
    't/l1f19.txt',
    't/l1f19.txt.in',
    't/l1f2.txt',
    't/l1f2.txt.in',
    't/l1f20.txt',
    't/l1f20.txt.in',
    't/l1f21.txt',
    't/l1f21.txt.in',
    't/l1f22.txt',
    't/l1f22.txt.in',
    't/l1f23.txt',
    't/l1f23.txt.in',
    't/l1f24.txt',
    't/l1f24.txt.in',
    't/l1f25.txt',
    't/l1f25.txt.in',
    't/l1f26.txt',
    't/l1f26.txt.in',
    't/l1f27.txt',
    't/l1f27.txt.in',
    't/l1f28.txt',
    't/l1f28.txt.in',
    't/l1f29.txt',
    't/l1f29.txt.in',
    't/l1f3.txt',
    't/l1f3.txt.in',
    't/l1f30.txt',
    't/l1f30.txt.in',
    't/l1f31.txt',
    't/l1f31.txt.in',
    't/l1f32.txt',
    't/l1f32.txt.in',
    't/l1f33.txt',
    't/l1f33.txt.in',
    't/l1f34.txt',
    't/l1f34.txt.in',
    't/l1f35.txt',
    't/l1f35.txt.in',
    't/l1f36.txt',
    't/l1f36.txt.in',
    't/l1f37.txt',
    't/l1f37.txt.in',
    't/l1f38.txt',
    't/l1f38.txt.in',
    't/l1f39.txt',
    't/l1f39.txt.in',
    't/l1f4.txt',
    't/l1f4.txt.in',
    't/l1f40.txt',
    't/l1f40.txt.in',
    't/l1f41.txt',
    't/l1f41.txt.in',
    't/l1f42.txt',
    't/l1f42.txt.in',
    't/l1f43.txt',
    't/l1f43.txt.in',
    't/l1f44.txt',
    't/l1f44.txt.in',
    't/l1f45.txt',
    't/l1f45.txt.in',
    't/l1f46.txt',
    't/l1f46.txt.in',
    't/l1f47.txt',
    't/l1f47.txt.in',
    't/l1f48.txt',
    't/l1f48.txt.in',
    't/l1f49.txt',
    't/l1f49.txt.in',
    't/l1f5.txt',
    't/l1f5.txt.in',
    't/l1f6.txt',
    't/l1f6.txt.in',
    't/l1f7.txt',
    't/l1f7.txt.in',
    't/l1f8.txt',
    't/l1f8.txt.in',
    't/l1f9.txt',
    't/l1f9.txt.in',
    't/l2f0.txt',
    't/l2f0.txt.in',
    't/l2f1.txt',
    't/l2f1.txt.in',
    't/l2f10.txt',
    't/l2f10.txt.in',
    't/l2f11.txt',
    't/l2f11.txt.in',
    't/l2f12.txt',
    't/l2f12.txt.in',
    't/l2f13.txt',
    't/l2f13.txt.in',
    't/l2f14.txt',
    't/l2f14.txt.in',
    't/l2f15.txt',
    't/l2f15.txt.in',
    't/l2f16.txt',
    't/l2f16.txt.in',
    't/l2f17.txt',
    't/l2f17.txt.in',
    't/l2f18.txt',
    't/l2f18.txt.in',
    't/l2f19.txt',
    't/l2f19.txt.in',
    't/l2f2.txt',
    't/l2f2.txt.in',
    't/l2f20.txt',
    't/l2f20.txt.in',
    't/l2f21.txt',
    't/l2f21.txt.in',
    't/l2f22.txt',
    't/l2f22.txt.in',
    't/l2f23.txt',
    't/l2f23.txt.in',
    't/l2f24.txt',
    't/l2f24.txt.in',
    't/l2f25.txt',
    't/l2f25.txt.in',
    't/l2f26.txt',
    't/l2f26.txt.in',
    't/l2f27.txt',
    't/l2f27.txt.in',
    't/l2f28.txt',
    't/l2f28.txt.in',
    't/l2f29.txt',
    't/l2f29.txt.in',
    't/l2f3.txt',
    't/l2f3.txt.in',
    't/l2f30.txt',
    't/l2f30.txt.in',
    't/l2f31.txt',
    't/l2f31.txt.in',
    't/l2f32.txt',
    't/l2f32.txt.in',
    't/l2f33.txt',
    't/l2f33.txt.in',
    't/l2f34.txt',
    't/l2f34.txt.in',
    't/l2f35.txt',
    't/l2f35.txt.in',
    't/l2f36.txt',
    't/l2f36.txt.in',
    't/l2f37.txt',
    't/l2f37.txt.in',
    't/l2f38.txt',
    't/l2f38.txt.in',
    't/l2f39.txt',
    't/l2f39.txt.in',
    't/l2f4.txt',
    't/l2f4.txt.in',
    't/l2f40.txt',
    't/l2f40.txt.in',
    't/l2f41.txt',
    't/l2f41.txt.in',
    't/l2f42.txt',
    't/l2f42.txt.in',
    't/l2f43.txt',
    't/l2f43.txt.in',
    't/l2f44.txt',
    't/l2f44.txt.in',
    't/l2f45.txt',
    't/l2f45.txt.in',
    't/l2f46.txt',
    't/l2f46.txt.in',
    't/l2f47.txt',
    't/l2f47.txt.in',
    't/l2f48.txt',
    't/l2f48.txt.in',
    't/l2f49.txt',
    't/l2f49.txt.in',
    't/l2f5.txt',
    't/l2f5.txt.in',
    't/l2f6.txt',
    't/l2f6.txt.in',
    't/l2f7.txt',
    't/l2f7.txt.in',
    't/l2f8.txt',
    't/l2f8.txt.in',
    't/l2f9.txt',
    't/l2f9.txt.in',
  ])
# ---
# name: test_actions_completions[--directory-parametric-BYGG_DEV_unset]
  list([
    'setup',
    'sort',
  ])
# ---
# name: test_actions_completions[--directory-taskrunner-BYGG_DEV_set]
  list([
    'do\\ something\\ from\\ TOML',
    'do\\ something\\ more',
    'fail',
    'hhgttg',
    'ls',
    'shorthand\\ action\\ toml,\\ with\\ spaces',
    'shorthand\\ action\\ yaml,\\ with\\ spaces',
    'shorthand_action_toml',
    'shorthand_action_yaml',
    'succeed',
    'touch\\ a\\ file',
  ])
# ---
# name: test_actions_completions[--directory-taskrunner-BYGG_DEV_unset]
  list([
    'do\\ something\\ from\\ TOML',
    'fail',
    'hhgttg',
    'shorthand\\ action\\ toml,\\ with\\ spaces',
    'shorthand\\ action\\ yaml,\\ with\\ spaces',
    'shorthand_action_toml',
    'shorthand_action_yaml',
    'succeed',
    'touch\\ a\\ file',
  ])
# ---
# name: test_actions_completions[--directory-trivial-BYGG_DEV_set]
  list([
    'another_entrypoint',
    'dynamic',
    'foo',
    'testfile\\ 1',
    'testfile\\ 2',
    'transform',
  ])
# ---
# name: test_actions_completions[--directory-trivial-BYGG_DEV_unset]
  list([
    'another_entrypoint',
    'transform',
  ])
# ---
# name: test_actions_completions[-C-checks-BYGG_DEV_set]
  list([
    'all_checks',
    'check_inputs_outputs',
    'circular_A',
    'circular_B',
    'circular_C',
    'no_outputs_A',
    'output_file_missing',
    'same_output_file_A',
    'same_output_file_B',
    'same_output_files',
  ])
# ---
# name: test_actions_completions[-C-checks-BYGG_DEV_unset]
  list([
    'all_checks',
    'check_inputs_outputs',
    'output_file_missing',
    'same_output_files',
  ])
# ---
# name: test_actions_completions[-C-environments-BYGG_DEV_set]
  list([
    'action1',
    'action1_python',
    'action1_python_entrypoint_python',
    'action2',
    'action2_python',
    'clean_environments',
    'default_action',
    'default_action_python',
  ])
# ---
# name: test_actions_completions[-C-environments-BYGG_DEV_unset]
  list([
    'action1',
    'action1_python_entrypoint_python',
    'action2',
    'clean_environments',
    'default_action',
  ])
# ---
# name: test_actions_completions[-C-failing_jobs-BYGG_DEV_set]
  list([
    'all',
    'gcc',
    'go',
    'make',
    'npm',
  ])
# ---
# name: test_actions_completions[-C-failing_jobs-BYGG_DEV_unset]
  list([
    'all',
    'gcc',
    'go',
    'make',
    'npm',
  ])
# ---
# name: test_actions_completions[-C-only_python-BYGG_DEV_set]
  list([
    'hello',
    'hi',
  ])
# ---
# name: test_actions_completions[-C-only_python-BYGG_DEV_unset]
  list([
    'hello',
    'hi',
  ])
# ---
# name: test_actions_completions[-C-parametric-BYGG_DEV_set]
  list([
    'setup',
    'setup_test_files',
    'sort',
    'sort_test_files',
    't/l0f0.txt',
    't/l0f0.txt.in',
    't/l0f1.txt',
    't/l0f1.txt.in',
    't/l0f10.txt',
    't/l0f10.txt.in',
    't/l0f11.txt',
    't/l0f11.txt.in',
    't/l0f12.txt',
    't/l0f12.txt.in',
    't/l0f13.txt',
    't/l0f13.txt.in',
    't/l0f14.txt',
    't/l0f14.txt.in',
    't/l0f15.txt',
    't/l0f15.txt.in',
    't/l0f16.txt',
    't/l0f16.txt.in',
    't/l0f17.txt',
    't/l0f17.txt.in',
    't/l0f18.txt',
    't/l0f18.txt.in',
    't/l0f19.txt',
    't/l0f19.txt.in',
    't/l0f2.txt',
    't/l0f2.txt.in',
    't/l0f20.txt',
    't/l0f20.txt.in',
    't/l0f21.txt',
    't/l0f21.txt.in',
    't/l0f22.txt',
    't/l0f22.txt.in',
    't/l0f23.txt',
    't/l0f23.txt.in',
    't/l0f24.txt',
    't/l0f24.txt.in',
    't/l0f25.txt',
    't/l0f25.txt.in',
    't/l0f26.txt',
    't/l0f26.txt.in',
    't/l0f27.txt',
    't/l0f27.txt.in',
    't/l0f28.txt',
    't/l0f28.txt.in',
    't/l0f29.txt',
    't/l0f29.txt.in',
    't/l0f3.txt',
    't/l0f3.txt.in',
    't/l0f30.txt',
    't/l0f30.txt.in',
    't/l0f31.txt',
    't/l0f31.txt.in',
    't/l0f32.txt',
    't/l0f32.txt.in',
    't/l0f33.txt',
    't/l0f33.txt.in',
    't/l0f34.txt',
    't/l0f34.txt.in',
    't/l0f35.txt',
    't/l0f35.txt.in',
    't/l0f36.txt',
    't/l0f36.txt.in',
    't/l0f37.txt',
    't/l0f37.txt.in',
    't/l0f38.txt',
    't/l0f38.txt.in',
    't/l0f39.txt',
    't/l0f39.txt.in',
    't/l0f4.txt',
    't/l0f4.txt.in',
    't/l0f40.txt',
    't/l0f40.txt.in',
    't/l0f41.txt',
    't/l0f41.txt.in',
    't/l0f42.txt',
    't/l0f42.txt.in',
    't/l0f43.txt',
    't/l0f43.txt.in',
    't/l0f44.txt',
    't/l0f44.txt.in',
    't/l0f45.txt',
    't/l0f45.txt.in',
    't/l0f46.txt',
    't/l0f46.txt.in',
    't/l0f47.txt',
    't/l0f47.txt.in',
    't/l0f48.txt',
    't/l0f48.txt.in',
    't/l0f49.txt',
    't/l0f49.txt.in',
    't/l0f5.txt',
    't/l0f5.txt.in',
    't/l0f6.txt',
    't/l0f6.txt.in',
    't/l0f7.txt',
    't/l0f7.txt.in',
    't/l0f8.txt',
    't/l0f8.txt.in',
    't/l0f9.txt',
    't/l0f9.txt.in',
    't/l1f0.txt',
    't/l1f0.txt.in',
    't/l1f1.txt',
    't/l1f1.txt.in',
    't/l1f10.txt',
    't/l1f10.txt.in',
    't/l1f11.txt',
    't/l1f11.txt.in',
    't/l1f12.txt',
    't/l1f12.txt.in',
    't/l1f13.txt',
    't/l1f13.txt.in',
    't/l1f14.txt',
    't/l1f14.txt.in',
    't/l1f15.txt',
    't/l1f15.txt.in',
    't/l1f16.txt',
    't/l1f16.txt.in',
    't/l1f17.txt',
    't/l1f17.txt.in',
    't/l1f18.txt',
    't/l1f18.txt.in',
    't/l1f19.txt',
    't/l1f19.txt.in',
    't/l1f2.txt',
    't/l1f2.txt.in',
    't/l1f20.txt',
    't/l1f20.txt.in',
    't/l1f21.txt',
    't/l1f21.txt.in',
    't/l1f22.txt',
    't/l1f22.txt.in',
    't/l1f23.txt',
    't/l1f23.txt.in',
    't/l1f24.txt',
    't/l1f24.txt.in',
    't/l1f25.txt',
    't/l1f25.txt.in',
    't/l1f26.txt',
    't/l1f26.txt.in',
    't/l1f27.txt',
    't/l1f27.txt.in',
    't/l1f28.txt',
    't/l1f28.txt.in',
    't/l1f29.txt',
    't/l1f29.txt.in',
    't/l1f3.txt',
    't/l1f3.txt.in',
    't/l1f30.txt',
    't/l1f30.txt.in',
    't/l1f31.txt',
    't/l1f31.txt.in',
    't/l1f32.txt',
    't/l1f32.txt.in',
    't/l1f33.txt',
    't/l1f33.txt.in',
    't/l1f34.txt',
    't/l1f34.txt.in',
    't/l1f35.txt',
    't/l1f35.txt.in',
    't/l1f36.txt',
    't/l1f36.txt.in',
    't/l1f37.txt',
    't/l1f37.txt.in',
    't/l1f38.txt',
    't/l1f38.txt.in',
    't/l1f39.txt',
    't/l1f39.txt.in',
    't/l1f4.txt',
    't/l1f4.txt.in',
    't/l1f40.txt',
    't/l1f40.txt.in',
    't/l1f41.txt',
    't/l1f41.txt.in',
    't/l1f42.txt',
    't/l1f42.txt.in',
    't/l1f43.txt',
    't/l1f43.txt.in',
    't/l1f44.txt',
    't/l1f44.txt.in',
    't/l1f45.txt',
    't/l1f45.txt.in',
    't/l1f46.txt',
    't/l1f46.txt.in',
    't/l1f47.txt',
    't/l1f47.txt.in',
    't/l1f48.txt',
    't/l1f48.txt.in',
    't/l1f49.txt',
    't/l1f49.txt.in',
    't/l1f5.txt',
    't/l1f5.txt.in',
    't/l1f6.txt',
    't/l1f6.txt.in',
    't/l1f7.txt',
    't/l1f7.txt.in',
    't/l1f8.txt',
    't/l1f8.txt.in',
    't/l1f9.txt',
    't/l1f9.txt.in',
    't/l2f0.txt',
    't/l2f0.txt.in',
    't/l2f1.txt',
    't/l2f1.txt.in',
    't/l2f10.txt',
    't/l2f10.txt.in',
    't/l2f11.txt',
    't/l2f11.txt.in',
    't/l2f12.txt',
    't/l2f12.txt.in',
    't/l2f13.txt',
    't/l2f13.txt.in',
    't/l2f14.txt',
    't/l2f14.txt.in',
    't/l2f15.txt',
    't/l2f15.txt.in',
    't/l2f16.txt',
    't/l2f16.txt.in',
    't/l2f17.txt',
    't/l2f17.txt.in',
    't/l2f18.txt',
    't/l2f18.txt.in',
    't/l2f19.txt',
    't/l2f19.txt.in',
    't/l2f2.txt',
    't/l2f2.txt.in',
    't/l2f20.txt',
    't/l2f20.txt.in',
    't/l2f21.txt',
    't/l2f21.txt.in',
    't/l2f22.txt',
    't/l2f22.txt.in',
    't/l2f23.txt',
    't/l2f23.txt.in',
    't/l2f24.txt',
    't/l2f24.txt.in',
    't/l2f25.txt',
    't/l2f25.txt.in',
    't/l2f26.txt',
    't/l2f26.txt.in',
    't/l2f27.txt',
    't/l2f27.txt.in',
    't/l2f28.txt',
    't/l2f28.txt.in',
    't/l2f29.txt',
    't/l2f29.txt.in',
    't/l2f3.txt',
    't/l2f3.txt.in',
    't/l2f30.txt',
    't/l2f30.txt.in',
    't/l2f31.txt',
    't/l2f31.txt.in',
    't/l2f32.txt',
    't/l2f32.txt.in',
    't/l2f33.txt',
    't/l2f33.txt.in',
    't/l2f34.txt',
    't/l2f34.txt.in',
    't/l2f35.txt',
    't/l2f35.txt.in',
    't/l2f36.txt',
    't/l2f36.txt.in',
    't/l2f37.txt',
    't/l2f37.txt.in',
    't/l2f38.txt',
    't/l2f38.txt.in',
    't/l2f39.txt',
    't/l2f39.txt.in',
    't/l2f4.txt',
    't/l2f4.txt.in',
    't/l2f40.txt',
    't/l2f40.txt.in',
    't/l2f41.txt',
    't/l2f41.txt.in',
    't/l2f42.txt',
    't/l2f42.txt.in',
    't/l2f43.txt',
    't/l2f43.txt.in',
    't/l2f44.txt',
    't/l2f44.txt.in',
    't/l2f45.txt',
    't/l2f45.txt.in',
    't/l2f46.txt',
    't/l2f46.txt.in',
    't/l2f47.txt',
    't/l2f47.txt.in',
    't/l2f48.txt',
    't/l2f48.txt.in',
    't/l2f49.txt',
    't/l2f49.txt.in',
    't/l2f5.txt',
    't/l2f5.txt.in',
    't/l2f6.txt',
    't/l2f6.txt.in',
    't/l2f7.txt',
    't/l2f7.txt.in',
    't/l2f8.txt',
    't/l2f8.txt.in',
    't/l2f9.txt',
    't/l2f9.txt.in',
  ])
# ---
# name: test_actions_completions[-C-parametric-BYGG_DEV_unset]
  list([
    'setup',
    'sort',
  ])
# ---
# name: test_actions_completions[-C-taskrunner-BYGG_DEV_set]
  list([
    'do\\ something\\ from\\ TOML',
    'do\\ something\\ more',
    'fail',
    'hhgttg',
    'ls',
    'shorthand\\ action\\ toml,\\ with\\ spaces',
    'shorthand\\ action\\ yaml,\\ with\\ spaces',
    'shorthand_action_toml',
    'shorthand_action_yaml',
    'succeed',
    'touch\\ a\\ file',
  ])
# ---
# name: test_actions_completions[-C-taskrunner-BYGG_DEV_unset]
  list([
    'do\\ something\\ from\\ TOML',
    'fail',
    'hhgttg',
    'shorthand\\ action\\ toml,\\ with\\ spaces',
    'shorthand\\ action\\ yaml,\\ with\\ spaces',
    'shorthand_action_toml',
    'shorthand_action_yaml',
    'succeed',
    'touch\\ a\\ file',
  ])
# ---
# name: test_actions_completions[-C-trivial-BYGG_DEV_set]
  list([
    'another_entrypoint',
    'dynamic',
    'foo',
    'testfile\\ 1',
    'testfile\\ 2',
    'transform',
  ])
# ---
# name: test_actions_completions[-C-trivial-BYGG_DEV_unset]
  list([
    'another_entrypoint',
    'transform',
  ])
# ---
# name: test_actions_completions[cwd-checks-BYGG_DEV_set]
  list([
    'all_checks',
    'check_inputs_outputs',
    'circular_A',
    'circular_B',
    'circular_C',
    'no_outputs_A',
    'output_file_missing',
    'same_output_file_A',
    'same_output_file_B',
    'same_output_files',
  ])
# ---
# name: test_actions_completions[cwd-checks-BYGG_DEV_unset]
  list([
    'all_checks',
    'check_inputs_outputs',
    'output_file_missing',
    'same_output_files',
  ])
# ---
# name: test_actions_completions[cwd-environments-BYGG_DEV_set]
  list([
    'action1',
    'action1_python',
    'action1_python_entrypoint_python',
    'action2',
    'action2_python',
    'clean_environments',
    'default_action',
    'default_action_python',
  ])
# ---
# name: test_actions_completions[cwd-environments-BYGG_DEV_unset]
  list([
    'action1',
    'action1_python_entrypoint_python',
    'action2',
    'clean_environments',
    'default_action',
  ])
# ---
# name: test_actions_completions[cwd-failing_jobs-BYGG_DEV_set]
  list([
    'all',
    'gcc',
    'go',
    'make',
    'npm',
  ])
# ---
# name: test_actions_completions[cwd-failing_jobs-BYGG_DEV_unset]
  list([
    'all',
    'gcc',
    'go',
    'make',
    'npm',
  ])
# ---
# name: test_actions_completions[cwd-only_python-BYGG_DEV_set]
  list([
    'hello',
    'hi',
  ])
# ---
# name: test_actions_completions[cwd-only_python-BYGG_DEV_unset]
  list([
    'hello',
    'hi',
  ])
# ---
# name: test_actions_completions[cwd-parametric-BYGG_DEV_set]
  list([
    'setup',
    'setup_test_files',
    'sort',
    'sort_test_files',
    't/l0f0.txt',
    't/l0f0.txt.in',
    't/l0f1.txt',
    't/l0f1.txt.in',
    't/l0f10.txt',
    't/l0f10.txt.in',
    't/l0f11.txt',
    't/l0f11.txt.in',
    't/l0f12.txt',
    't/l0f12.txt.in',
    't/l0f13.txt',
    't/l0f13.txt.in',
    't/l0f14.txt',
    't/l0f14.txt.in',
    't/l0f15.txt',
    't/l0f15.txt.in',
    't/l0f16.txt',
    't/l0f16.txt.in',
    't/l0f17.txt',
    't/l0f17.txt.in',
    't/l0f18.txt',
    't/l0f18.txt.in',
    't/l0f19.txt',
    't/l0f19.txt.in',
    't/l0f2.txt',
    't/l0f2.txt.in',
    't/l0f20.txt',
    't/l0f20.txt.in',
    't/l0f21.txt',
    't/l0f21.txt.in',
    't/l0f22.txt',
    't/l0f22.txt.in',
    't/l0f23.txt',
    't/l0f23.txt.in',
    't/l0f24.txt',
    't/l0f24.txt.in',
    't/l0f25.txt',
    't/l0f25.txt.in',
    't/l0f26.txt',
    't/l0f26.txt.in',
    't/l0f27.txt',
    't/l0f27.txt.in',
    't/l0f28.txt',
    't/l0f28.txt.in',
    't/l0f29.txt',
    't/l0f29.txt.in',
    't/l0f3.txt',
    't/l0f3.txt.in',
    't/l0f30.txt',
    't/l0f30.txt.in',
    't/l0f31.txt',
    't/l0f31.txt.in',
    't/l0f32.txt',
    't/l0f32.txt.in',
    't/l0f33.txt',
    't/l0f33.txt.in',
    't/l0f34.txt',
    't/l0f34.txt.in',
    't/l0f35.txt',
    't/l0f35.txt.in',
    't/l0f36.txt',
    't/l0f36.txt.in',
    't/l0f37.txt',
    't/l0f37.txt.in',
    't/l0f38.txt',
    't/l0f38.txt.in',
    't/l0f39.txt',
    't/l0f39.txt.in',
    't/l0f4.txt',
    't/l0f4.txt.in',
    't/l0f40.txt',
    't/l0f40.txt.in',
    't/l0f41.txt',
    't/l0f41.txt.in',
    't/l0f42.txt',
    't/l0f42.txt.in',
    't/l0f43.txt',
    't/l0f43.txt.in',
    't/l0f44.txt',
    't/l0f44.txt.in',
    't/l0f45.txt',
    't/l0f45.txt.in',
    't/l0f46.txt',
    't/l0f46.txt.in',
    't/l0f47.txt',
    't/l0f47.txt.in',
    't/l0f48.txt',
    't/l0f48.txt.in',
    't/l0f49.txt',
    't/l0f49.txt.in',
    't/l0f5.txt',
    't/l0f5.txt.in',
    't/l0f6.txt',
    't/l0f6.txt.in',
    't/l0f7.txt',
    't/l0f7.txt.in',
    't/l0f8.txt',
    't/l0f8.txt.in',
    't/l0f9.txt',
    't/l0f9.txt.in',
    't/l1f0.txt',
    't/l1f0.txt.in',
    't/l1f1.txt',
    't/l1f1.txt.in',
    't/l1f10.txt',
    't/l1f10.txt.in',
    't/l1f11.txt',
    't/l1f11.txt.in',
    't/l1f12.txt',
    't/l1f12.txt.in',
    't/l1f13.txt',
    't/l1f13.txt.in',
    't/l1f14.txt',
    't/l1f14.txt.in',
    't/l1f15.txt',
    't/l1f15.txt.in',
    't/l1f16.txt',
    't/l1f16.txt.in',
    't/l1f17.txt',
    't/l1f17.txt.in',
    't/l1f18.txt',
    't/l1f18.txt.in',
    't/l1f19.txt',
    't/l1f19.txt.in',
    't/l1f2.txt',
    't/l1f2.txt.in',
    't/l1f20.txt',
    't/l1f20.txt.in',
    't/l1f21.txt',
    't/l1f21.txt.in',
    't/l1f22.txt',
    't/l1f22.txt.in',
    't/l1f23.txt',
    't/l1f23.txt.in',
    't/l1f24.txt',
    't/l1f24.txt.in',
    't/l1f25.txt',
    't/l1f25.txt.in',
    't/l1f26.txt',
    't/l1f26.txt.in',
    't/l1f27.txt',
    't/l1f27.txt.in',
    't/l1f28.txt',
    't/l1f28.txt.in',
    't/l1f29.txt',
    't/l1f29.txt.in',
    't/l1f3.txt',
    't/l1f3.txt.in',
    't/l1f30.txt',
    't/l1f30.txt.in',
    't/l1f31.txt',
    't/l1f31.txt.in',
    't/l1f32.txt',
    't/l1f32.txt.in',
    't/l1f33.txt',
    't/l1f33.txt.in',
    't/l1f34.txt',
    't/l1f34.txt.in',
    't/l1f35.txt',
    't/l1f35.txt.in',
    't/l1f36.txt',
    't/l1f36.txt.in',
    't/l1f37.txt',
    't/l1f37.txt.in',
    't/l1f38.txt',
    't/l1f38.txt.in',
    't/l1f39.txt',
    't/l1f39.txt.in',
    't/l1f4.txt',
    't/l1f4.txt.in',
    't/l1f40.txt',
    't/l1f40.txt.in',
    't/l1f41.txt',
    't/l1f41.txt.in',
    't/l1f42.txt',
    't/l1f42.txt.in',
    't/l1f43.txt',
    't/l1f43.txt.in',
    't/l1f44.txt',
    't/l1f44.txt.in',
    't/l1f45.txt',
    't/l1f45.txt.in',
    't/l1f46.txt',
    't/l1f46.txt.in',
    't/l1f47.txt',
    't/l1f47.txt.in',
    't/l1f48.txt',
    't/l1f48.txt.in',
    't/l1f49.txt',
    't/l1f49.txt.in',
    't/l1f5.txt',
    't/l1f5.txt.in',
    't/l1f6.txt',
    't/l1f6.txt.in',
    't/l1f7.txt',
    't/l1f7.txt.in',
    't/l1f8.txt',
    't/l1f8.txt.in',
    't/l1f9.txt',
    't/l1f9.txt.in',
    't/l2f0.txt',
    't/l2f0.txt.in',
    't/l2f1.txt',
    't/l2f1.txt.in',
    't/l2f10.txt',
    't/l2f10.txt.in',
    't/l2f11.txt',
    't/l2f11.txt.in',
    't/l2f12.txt',
    't/l2f12.txt.in',
    't/l2f13.txt',
    't/l2f13.txt.in',
    't/l2f14.txt',
    't/l2f14.txt.in',
    't/l2f15.txt',
    't/l2f15.txt.in',
    't/l2f16.txt',
    't/l2f16.txt.in',
    't/l2f17.txt',
    't/l2f17.txt.in',
    't/l2f18.txt',
    't/l2f18.txt.in',
    't/l2f19.txt',
    't/l2f19.txt.in',
    't/l2f2.txt',
    't/l2f2.txt.in',
    't/l2f20.txt',
    't/l2f20.txt.in',
    't/l2f21.txt',
    't/l2f21.txt.in',
    't/l2f22.txt',
    't/l2f22.txt.in',
    't/l2f23.txt',
    't/l2f23.txt.in',
    't/l2f24.txt',
    't/l2f24.txt.in',
    't/l2f25.txt',
    't/l2f25.txt.in',
    't/l2f26.txt',
    't/l2f26.txt.in',
    't/l2f27.txt',
    't/l2f27.txt.in',
    't/l2f28.txt',
    't/l2f28.txt.in',
    't/l2f29.txt',
    't/l2f29.txt.in',
    't/l2f3.txt',
    't/l2f3.txt.in',
    't/l2f30.txt',
    't/l2f30.txt.in',
    't/l2f31.txt',
    't/l2f31.txt.in',
    't/l2f32.txt',
    't/l2f32.txt.in',
    't/l2f33.txt',
    't/l2f33.txt.in',
    't/l2f34.txt',
    't/l2f34.txt.in',
    't/l2f35.txt',
    't/l2f35.txt.in',
    't/l2f36.txt',
    't/l2f36.txt.in',
    't/l2f37.txt',
    't/l2f37.txt.in',
    't/l2f38.txt',
    't/l2f38.txt.in',
    't/l2f39.txt',
    't/l2f39.txt.in',
    't/l2f4.txt',
    't/l2f4.txt.in',
    't/l2f40.txt',
    't/l2f40.txt.in',
    't/l2f41.txt',
    't/l2f41.txt.in',
    't/l2f42.txt',
    't/l2f42.txt.in',
    't/l2f43.txt',
    't/l2f43.txt.in',
    't/l2f44.txt',
    't/l2f44.txt.in',
    't/l2f45.txt',
    't/l2f45.txt.in',
    't/l2f46.txt',
    't/l2f46.txt.in',
    't/l2f47.txt',
    't/l2f47.txt.in',
    't/l2f48.txt',
    't/l2f48.txt.in',
    't/l2f49.txt',
    't/l2f49.txt.in',
    't/l2f5.txt',
    't/l2f5.txt.in',
    't/l2f6.txt',
    't/l2f6.txt.in',
    't/l2f7.txt',
    't/l2f7.txt.in',
    't/l2f8.txt',
    't/l2f8.txt.in',
    't/l2f9.txt',
    't/l2f9.txt.in',
  ])
# ---
# name: test_actions_completions[cwd-parametric-BYGG_DEV_unset]
  list([
    'setup',
    'sort',
  ])
# ---
# name: test_actions_completions[cwd-taskrunner-BYGG_DEV_set]
  list([
    'do\\ something\\ from\\ TOML',
    'do\\ something\\ more',
    'fail',
    'hhgttg',
    'ls',
    'shorthand\\ action\\ toml,\\ with\\ spaces',
    'shorthand\\ action\\ yaml,\\ with\\ spaces',
    'shorthand_action_toml',
    'shorthand_action_yaml',
    'succeed',
    'touch\\ a\\ file',
  ])
# ---
# name: test_actions_completions[cwd-taskrunner-BYGG_DEV_unset]
  list([
    'do\\ something\\ from\\ TOML',
    'fail',
    'hhgttg',
    'shorthand\\ action\\ toml,\\ with\\ spaces',
    'shorthand\\ action\\ yaml,\\ with\\ spaces',
    'shorthand_action_toml',
    'shorthand_action_yaml',
    'succeed',
    'touch\\ a\\ file',
  ])
# ---
# name: test_actions_completions[cwd-trivial-BYGG_DEV_set]
  list([
    'another_entrypoint',
    'dynamic',
    'foo',
    'testfile\\ 1',
    'testfile\\ 2',
    'transform',
  ])
# ---
# name: test_actions_completions[cwd-trivial-BYGG_DEV_unset]
  list([
    'another_entrypoint',
    'transform',
  ])
# ---
# name: test_directory_completions[--directory ]
  list([
    'checks',
    'environments',
    'failing_jobs',
    'only_python',
    'parametric',
    'taskrunner',
    'trivial',
  ])
# ---
# name: test_directory_completions[-C ]
  list([
    'checks',
    'environments',
    'failing_jobs',
    'only_python',
    'parametric',
    'taskrunner',
    'trivial',
  ])
# ---
